...
    <string name="pref_upstream_translation_desc">Help translate upstream VerveDo on Crowdin</string>
    <string name="page_settings">Settings</string>
    <string name="action_add_task">Add Task</string>
    <string name="tip_no_task">There are no tasks to complete at the moment.\nTake a good rest!</string>
    <string name="placeholder_add_todo">Title</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="error_no_content_entered">No content entered</string>
    <string name="tip_select_this">Select this</string>
    <string name="tip_mark_completed">Mark as completed</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="tip_remain_tasks">%s tasks remaining</string>
    <string name="page_crash">Oops! App went wrong</string>
    <string name="tip_no_crash_logs">No crash logs</string>
    <string name="action_exit_app">Exit app</string>
    <string name="action_delete">Delete</string>
    <string name="tip_clear_selected_items">Clear selected items</string>
    <string name="tip_select_all">Select all</string>
    <string name="title_selected_count">%s selected</string>
    <string name="action_confirm">Confirm</string>
    <string name="title_warning">Warning</string>
    <string name="tip_delete_task">You are about to delete the %s tasks. Once deleted, these tasks cannot be recovered. Are you sure you want to delete them?</string>
    <string name="placeholder_divider" translatable="false">/</string>
...
    <string name="time_months_ago">%d mo ago</string>
    <string name="time_years_ago">%d y ago</string>
    <string name="label_due_date">Due Date</string>
    <string name="title_all_task">All</string>
    <string name="title_completed_task">Completed</string>
    <string name="title_pending_task">Pending</string>
    <string name="action_search">Search</string>
    <string name="action_close">Close</string>
    <string name="sorting_due_date">Due date</string>
    <string name="tip_search_task_not_found">No tasks found</string>
    <string name="tip_no_task_brief">No tasks</string>
    <string name="title_today_task">Today\'s Task Progress</string>
    <string name="pref_text_field_auto_focus">Auto Focus Text Field</string>
...
